[gd_scene format=3 uid="uid://pg3mufyx6xpt"]

[ext_resource type="Script" uid="uid://dqf1ortuuedyj" path="res://src/ui/fase-selection/fase_selection.gd" id="1_rier4"]
[ext_resource type="Texture2D" uid="uid://kgpk41rq76f5" path="res://assets/Free Industrial Zone Tileset/1 Tiles/IndustrialTile_20.png" id="2_s7sdb"]
[ext_resource type="StyleBox" uid="uid://dctct65881qyo" path="res://src/ui/resources/button_normal_style.tres" id="3_s7sdb"]
[ext_resource type="StyleBox" uid="uid://csbv4mrlhdog3" path="res://src/ui/resources/button_hover_style.tres" id="4_3l4xd"]

[node name="FaseSelection" type="Control" unique_id=517806460]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rier4")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=515281274]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1139104575]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer" unique_id=1186280873]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Fase1" type="TextureButton" parent="MarginContainer/VBoxContainer/GridContainer" unique_id=815207610]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
texture_normal = ExtResource("2_s7sdb")
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Fase1" unique_id=1467255543]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -11.5
offset_right = 24.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Fase 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fase2" type="TextureButton" parent="MarginContainer/VBoxContainer/GridContainer" unique_id=2129276241]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_s7sdb")
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/Fase2" unique_id=577706477]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -11.5
offset_right = 24.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Fase 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2122197822]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("3_s7sdb")
theme_override_styles/hover = ExtResource("4_3l4xd")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Fase1" to="." method="_on_fase_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/Fase2" to="." method="_on_fase_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
